syntax = "proto3";

option go_package = "FF/protos";

package ff;

import "types.proto";
import "google/api/annotations.proto";

service QueueList {
  rpc Create(QueueReq) returns (Empty) {
    option (google.api.http) = {
      post: "/queuelist/create"
      body: "*"
    };
  }

  rpc Rename(RenameQueueReq) returns (Empty) {
    option (google.api.http) = {
      post: "/queuelist/rename"
      body: "*"
    };
  }

  rpc Delete(QueueReq) returns (Empty) {
    option (google.api.http) = {
      delete: "/queuelist/delete"
      body: "*"
    };
  }

  rpc List(Empty) returns (stream ListQueueRes) {
    option (google.api.http) = {
      get: "/queuelist/list"
    };
  }

  rpc GetQueue(QueueReq) returns (Empty) {
    option (google.api.http) = {
      get: "/queuelist/getqueue"
      body: "*"
    };
  }
}

message RenameQueueReq {
  string oldname = 1;
  string newName = 2;
}

message ListQueueRes {
  string name = 1;
}
